--- a/newticketsdatabase.html
+++ b/newticketsdatabase.html
@@ -233,7 +233,7 @@
 
     <!-- Accused (Driver) Dropdown -->
     <div class="form-group">
-      <label for="accusedSelect">Accused <span style="color: red;">*</span></label>
+      <label for="accusedSelect">Accuser (Driver) <span style="color: red;">*</span></label>
       <select id="accusedSelect">
         <option value="" disabled selected>Select a driver…</option>
       </select>
@@ -319,7 +319,7 @@
       </select>
     </div>
 
-    <!-- Submit Button -->
+    <!-- Submit Button --> 
     <button id="submitBtn">Submit Ticket</button>
     <div class="status" id="statusMsg"></div>
 
